[*]Added the ability to configure the size of oceans. This will only affect new worlds.
[*]Added willow groves as a new swamp variant (witches, slimes, reeds).
[*]Added icy peaks as a new mountain variant (emeralds, silverfish).
[*]Added patagonia as a new plains variant (villages, pumpkins) which spawns occasional tall, stony mountains. Emeralds and silverfish may spawn under the mountains.
[*]Changed skylands cloud height to render below the bottom of the world (reduced y level from 8 to -8).
[*]Fixed an issue where reeds could not generate along rivers in jungles.
[*]Fixed an issue in the create world menu where buttons would overlap on low resolution screens or at very high GUI scales.
[/list]

Version 1.1.3
[list]
[*]Removed space in the filename to assist users on linux.
[*]Added a new option to use vanilla sized biomes in standard BTA generation. The world types are "BTASmall" and "BTASmallDeco" for server owners.
[*]Added the ability for clay to replace grass in standard (waterlogged) generation. This allows clay to form on shores in grass like it does in sand variants.
[*]Added the ability for tall grass, reeds, and saplings to grow on grassy clay.
[*]Changed how the end generates in all BTA world types to create slightly more interesting terrain.
[*]Changed (increased) the height to which iron will generate from 64 to 80 in skylands given that at any given time the player is likely to be much higher in elevation that in vanilla.
[*]Changed sugar cane in skylands to no longer be restricted by biome given how rarely it still generates.
[*]Fixed an issue where fungal forest and fungal forest lowlands did not have the same grass color.
[*]Fixed an issue where clay patches that overlapped would always generate dirt clay even if the rest of the patch was based on a different block type.
[/list]

Version 1.1.2
[list]
[*]Added the ability for temples and witch huts to spawn in skylands, although they may sometimes be floating over the void still.